tests/paczka1/fuzzy1/87106841.err
Error in line 5: NDY A635 43,1
Error in line 18: GLL A501 39,60
Error in line 9: GLL A635 97,7
